Swapped from Futura to Lato

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>William Hirsch</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
 <header>
