Added a 404 and Jekyll

--- a/404.html
+++ b/404.html
@@ -9,12 +9,11 @@
 <body>
 <header>
     <h1>William Hirsch</h1>
-    {% include header.html %}
 </header>
 
 <content>
-    <h2></h2>
-    <p>Website under construction, check back later</p>
+    <h2>404 Error</h2>
+    <p>Something went wrong along the way, the link you tried to go to is dead. Try another page!</p>
 </content>
 
 <footer>
