Jekyll works now, Will is no longer a dumbfuck

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html>
 
@@ -7,18 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-<header>
-    <h1>William Hirsch</h1>
-    {% include header.html %}
-</header>
+{% include header.html %}
 
 <content>
     <h2></h2>
     <p>Website under construction, check back later</p>
 </content>
-
-<footer>
-    This website was made by William Hirsch
-</footer>
-
+{% include footer.html %}
 </body>
