--- a/404.html
+++ b/404.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html>
 
@@ -7,17 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-<header>
-    <h1>William Hirsch</h1>
-</header>
+{% include header.html %}
 
 <content>
     <h2>404 Error</h2>
     <p>Something went wrong along the way, the link you tried to go to is dead. Try another page!</p>
 </content>
-
-<footer>
-    This website was made by William Hirsch
-</footer>
-
+{% include footer.html %}
 </body>
