Contact page, nav bar, and other
Includes are now a lot bigger,
404 page is more comprehensive.

--- a/404.html
+++ b/404.html
@@ -1,19 +1,11 @@
 ---
+title: William Hirsch - Error 404
 ---
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>William Hirsch</title>
-    <link rel="stylesheet" href="stylesheet.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-</head>
-<body>
 {% include header.html %}
 
 <content>
-    <h2>404 Error</h2>
-    <p>Something went wrong along the way, the link you tried to go to is dead. Try another page!</p>
+    <h2>Error 404</h2>
+    <p>Looks like the page you're trying to go to doesn't exist! <br>Try another page.</p>
 </content>
+
 {% include footer.html %}
-</body>
