--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 ---
+title: William Hirsch
 ---
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>William Hirsch</title>
-    <link rel="stylesheet" href="stylesheet.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-</head>
-<body>
 {% include header.html %}
 
 <content>
-    <h2></h2>
+    <h2>Home</h2>
     <p>Website under construction, check back later</p>
 </content>
+
 {% include footer.html %}
-</body>
