Major site overhaul, and blog post 1

--- a/404.html
+++ b/404.html
@@ -1,11 +1,6 @@
 ---
-title: William Hirsch - Error 404
+title: Error 404
+layout: default
 ---
-{% include header.html %}
-
-<content>
-    <h2>Error 404</h2>
-    <p>Looks like the page you're trying to go to doesn't exist! <br>Try another page.</p>
-</content>
-
-{% include footer.html %}
+<h2>Error 404</h2>
+<p>Looks like the page you're trying to go to doesn't exist! <br>Try another page.</p>
