--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,10 @@
 ---
-title: William Hirsch - Contact
+title: Contact
+layout: default
 ---
-{% include header.html %}
-
-<content>
-    <h2>Contact Me</h2>
-    <p>There are a number of easy ways to contact me, including:</p>
-    <ul>
-        <li><a href="mailto:williamhirsch@williamhirsch.ca">Email me at williamhirsch@williamhirsch.ca</a></li>
-        <li><a href="https://twitter.com/Wigsinator">Contact me on Twitter</a></li>
-    </ul>
-</content>
-
-{% include footer.html %}
+<h2>Contact Me</h2>
+<p>There are a number of easy ways to contact me, including:</p>
+<ul>
+    <li><a href="mailto:williamhirsch@williamhirsch.ca">Email me at williamhirsch@williamhirsch.ca</a></li>
+    <li><a href="https://twitter.com/Wigsinator">Contact me on Twitter</a></li>
+</ul>
