--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 ---
 title: William Hirsch
+layout: default
 ---
-{% include header.html %}
-
-<content>
-    <h2>Home</h2>
-    <p>Website under construction, check back later</p>
-</content>
-
-{% include footer.html %}
+<h2>Home</h2>
+<p>Website under construction, check back later</p>
