Removed Twitter, added Github

--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,5 @@ layout: default
 <p>There are a number of easy ways to contact me, including:</p>
 <ul>
     <li><a href="mailto:williamhirsch@williamhirsch.ca">Email me at williamhirsch@williamhirsch.ca</a></li>
-    <li><a href="https://twitter.com/Wigsinator">Contact me on Twitter</a></li>
+    <li><a href="https://github.com/Wigsinator">Check out my Github</a></li>
 </ul>
