Update Blog page to reflect that blog posts are no longer being made

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,9 @@
 layout: default
 title: Blog
 ---
-<h2>Latest posts</h2>
+<h2>CSC290 blog posts</h2>
+
+<p>As part of CSC290: Communication for Computer Scientists, we were required to maintain a blog for the duration of the class. The blog posts are being kept here for posterity, but no new ones are being created as of right now.</p>
 
 <ul>
 	{% for post in site.posts %}
